# gryphon-telegram-bot

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
gryphon-telegram-bot/: food.py  gryphon.py  main.py
gryphon-telegram-bot/data/: riddles.txt
gryphon_telegram_bot/: items.py
gryphon_telegram_bot/data/: names.txt
